# emsaplibraries

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
EMSAP/modules/: preprocessing.py
modules/: electrostatic_simulations.py  indicators_calculation.py  sequence_preprocessing.py  structural_otimization.py
src/emsaplibraries/: __init__.py  _runtime.py  electrostatics.py  indicators.py  preprocessing.py  structure.py
tests/: test_imports.py  test_indicators.py  test_runtime_checks.py
